--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "ranalyser",
+  "name": "ranalyse",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "ranalyse": "./bin/ranalyse"
   },
   "author": "Karolis Narkevicius <karolis@qubitproducts.com>",
   "license": "ISC",
