--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ranalyse",
+  "name": "rjs-report",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "ranalyse": "./bin/ranalyse"
+    "rjs-report": "./bin/rjs-report"
   },
   "author": "Karolis Narkevicius <karolis@qubitproducts.com>",
   "license": "ISC",
